{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 7,
  "lineage": "6411fa68-f015-b228-2185-96a0a7c4f40d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:031738593115:security-group/sg-099cadfa4880a1e51",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-099cadfa4880a1e51",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-078a9b266bfaf693f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "terraform-20210527152454462600000002",
            "name_prefix": "terraform-",
            "owner_id": "031738593115",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-5a881430"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver.aws_security_group.web_server"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-074be263b49dfe42d",
            "domain": "vpc",
            "id": "eipalloc-bdddff87",
            "instance": "i-082c7f0fbbcf7fc84",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-03c7f89191757d2c8",
            "private_dns": "ip-172-31-3-24.eu-central-1.compute.internal",
            "private_ip": "172.31.3.24",
            "public_dns": "ec2-18-157-210-192.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.210.192",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_elasticache_cluster.redis",
            "aws_security_group.redis",
            "data.aws_ami.base",
            "module.webserver.aws_instance.web_server",
            "module.webserver.aws_security_group.web_server",
            "random_string.server"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ab0245b97e7383b",
            "arn": "arn:aws:ec2:eu-central-1:031738593115:instance/i-082c7f0fbbcf7fc84",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082c7f0fbbcf7fc84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tomo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03c7f89191757d2c8",
            "private_dns": "ip-172-31-3-24.eu-central-1.compute.internal",
            "private_ip": "172.31.3.24",
            "public_dns": "ec2-3-67-75-38.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.75.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e7863e50c7a72db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20210527152452158300000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b6d859fa",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-078a9b266bfaf693f"
            ]
          },
          "dependencies": [
            "aws_elasticache_cluster.redis",
            "aws_security_group.redis",
            "data.aws_ami.base",
            "module.webserver.aws_security_group.web_server",
            "random_string.server"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:031738593115:security-group/sg-078a9b266bfaf693f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078a9b266bfaf693f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20210527152452158300000001",
            "name_prefix": "terraform-",
            "owner_id": "031738593115",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-5a881430"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}